Mi Mär 11 17:04:03 CET 2009 Guido Günther <agx@sigxcpu.org>

	add a pwdialog gobject - remove lots of duplicate code and splits most
	of the password dialog handling into its own file
	* src/krb5-auth-applet.[ch]: move dialog handling from
	here...
	* src/krb5-auth-dialog.[ch]: ..and here...
	* src/krb5-auth-pwdialog.[ch]: ... to here - new files.
	* src/krb5-auth-dialog.glade: rename krb5_wrong_label to
	krb5_status_label
	* po/POTFILES.in, src/Makefile.am: add src/krb5-auth-pwdialog.c

Sat Feb 28 16:41:54 CET 2009 Guido Günther <agx@sigxcpu.org>

	add DBus interface to acquire TGT
	* src/krb5-auth-dbus.[ch] (ka_dbus_acquire_tgt, ka_dbus_service): new
	  functions
	* src/Makefile.am: generate krb5-auth-applet-dbus-glue.h via
	  dbus-binding-tool
	* src/krb5-auth-applet-dbus.xml: new file
	* README: example dbus call

Sat Feb 28 16:35:45 CET 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-applet.[ch] (ka_check_credentials): new function to
	  check if a principal matches our default
	  (ka_grab_credentials): return TRUE on success

Sat Feb 28 14:27:57 CET 2009 Guido Günther <agx@sigxcpu.org>

	Turn Krb5AuthApplet into a GObject named KaApplet
	* src/krb5-auth-applet.[ch]: declare and define KaApplet,
	  KaAppletPrivate
	  (ka_applet_{set,get}_property): new functions to access properties
	  (ka_applet_{dispose,finalize,{class,}_init}: new functions
	  (ka_applet_get_show_trayicon, ka_applet_set_tgt_renewable,
	   ka_applet_get_tgt_renewable, ka_applet_get_pw_prompt_secs,
	   ka_applet_run_pw_dialog, ka_applet_get_pwdialog_xml,
	   ka_applet_hide_pw_dialog, ka_applet_get_pw_label,
	   ka_applet_set_pw_dialog_persist): new functions
	* src/krb5-auth-dialog.c: use the above instead of accessing KaApplet
	  private data
	* src/krb5-auth-gconf.c: likewise
	* src/krb5-auth-dbus.c: update copyright
	* src/krb5-auth-notify.[ch] (ka_send_event_notification): moved from
	  to src/krb5-auth-applet.c

Sat Feb 28 14:18:35 CET 2009 Guido Günther <agx@sigxcpu.org>
